--- a/faq/index.html
+++ b/faq/index.html
@@ -5,7 +5,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title>机械装置：常见问题 - Machinery: FAQ</title>
+<title>机械放置 [工程师手册]</title>
 <link type="text/css" href="style.css" rel="Stylesheet"/>
 
 </head>
@@ -213,11 +213,12 @@
       <br><br>
       <div class="title2">Saving the game</div>
 
-      <p>Sometimes it might be important to know when the game is saved. There are only two situations in which the game is saved automatically:</p>
+      <p>Sometimes it might be important to know when the game is saved. There are only three situations in which the game is saved automatically:</p>
 
       <p><ul>
         <li>when the save timer at the footer reaches 0, which happens every 120 seconds</li>
         <li>If the Synchrotron is activated, Magnetron getting armed will automatically save the game. This is done to lock in the chosen Magnetron symbol to prevent manipulation by reloading.</li>
+        <li>If you are Chief Engineer, the game is automatically saved ever warp</li>
       </ul></p>
 
       <p>The two other methods to change the save file of the game are initiated by the player:</p>
@@ -352,15 +353,15 @@
 <!-- 客服 结束 -->
 <!--站长统计-->
 <div style="display: none">
-  <script>
-  var _hmt = _hmt || [];
-  (function() {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-  })();
-  </script>
-      </div>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+        </div>
 </body>
 </html>
