--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
-<title>机械师 - Machinery</title>
+<title>机械装置 - Machinery</title>
 <link type="text/css" href="dark.css" rel="Stylesheet"/>
 <script type="text/javascript" src="jq/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="jq/lz-string.min.js"></script>
